--- a/home_registration.qmd
+++ b/home_registration.qmd
@@ -68,7 +68,7 @@ Please refer to our [FAQs](home_faq.html).
 
 ## Location
 
-![](assets/images/visby.jpg)\
+![](assets/images/visby.jpg)  
 [Source: [VisitSweden](https://visitsweden.com/where-to-go/southern-sweden/gotland/visby/)]{.small}
 
 The workshop takes place in the city of Visby nestled on the island of Gotland, Sweden. This medieval town, dating back to the 12th century, is a UNESCO world heritage site. For more information, visit [Visit Sweden](https://visitsweden.com/where-to-go/southern-sweden/gotland/visby/) and [Gotland Tourism](https://gotland.com/).
@@ -122,7 +122,7 @@ Visby is accessible from mainland Sweden by flight or ferry. See [Gotland touris
 
 Ferry connections are available from Stockholm (Nynäshamn) to Visby through [Destination Gotland](https://www.destinationgotland.se/) or [Vikingline](https://www.vikingline.se). The journey time from Nynäshamn to Visby is about 3 hours. The ferry terminal in Visby is walking distance from Uppsala University Campus Gotland (800m) and our suggested accomodations.
 
-![](assets/images/destination-gotland.jpg)\
+![](assets/images/destination-gotland.jpg)  
 [Source: [DestinationGotland](https://www.destinationgotland.se/)]{.small}
 
 ## Venue
