--- a/home_program.qmd
+++ b/home_program.qmd
@@ -16,8 +16,9 @@ format:
 
 [Jennifer Bryan](https://jennybryan.org/)
 
-Software engineer at Posit.  
-Data science professor, [University of British Columbia](https://www.stat.ubc.ca/jenny-bryan)  
+Software engineer at Posit  
+Data science professor  
+[University of British Columbia](https://www.stat.ubc.ca/jenny-bryan)  
 Vancouver, Canada
 
 :::
@@ -27,8 +28,9 @@ Vancouver, Canada
 
 [Henrik Bengtsson](https://www.linkedin.com/in/henrikbengtsson/)
 
-Project lead for [Futurverse](https://www.futureverse.org/).  
-Associate professor in Epidemiology & Biostatistics, [University of California](https://profiles.ucsf.edu/henrik.bengtsson)  
+Project lead for [Futureverse](https://www.futureverse.org/)  
+Associate professor in Epidemiology & Biostatistics  
+[University of California](https://profiles.ucsf.edu/henrik.bengtsson)  
 San Francisco, USA
 
 :::
@@ -44,7 +46,7 @@ We will be covering a number of topics in R programming with focus on R features
 - Code debugging, optimization and profiling
 - Parallelization and vectorization in R
 - Crafting your own functions
-- Objected oriented programming and R classes: S3, S4, R6 and RC
+- Object oriented programming and R classes: S3, S4, R6 and RC
 - Anatomy of an R package: Creating your own package from scratch
 - Tidy data flow using tidyverse
 - Using the language of graphics: ggplot2
