Added schedule, updated home pages and docker image

--- a/home_registration.qmd
+++ b/home_registration.qmd
@@ -145,6 +145,9 @@ The workshop is held on [Campus Gotland](http://www.campusgotland.uu.se/), Uppsa
 
 ::: {.large}
 
+[B27 Lärosal](https://link.mazemap.com/q9F307rf)  
+Campus Gotland  
+Uppsala University  
 Cramérgatan 3  
 621 57 Visby  
 Gotland, Sweden  
